# lyrian

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lyrian.yml
examples/: basic.rs  from_json.rs  sample_model.json  sample_text.txt
src/: builder.rs  chars.rs  lib.rs  lyric.rs  make_model.rs  markov.rs  model.rs  morphological_analysis.rs  walkers_alias_method.rs
src/walkers_alias_method/: builder.rs  mod.rs  table.rs
