[package]
name = "lyrian"
version = "0.1.0"
authors = ["Ichi Hazuki <ichi.h3@gmail.com>"]
description = "A Rust crate to generate Japanese lyrics with Markov chain."
homepage = "https://github.com/LyrianBot/lyrian"
repository = "https://github.com/LyrianBot/lyrian"
keywords = ["lyrics", "markov"]
categories = ["text-processing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = "0.8.0"
lindera-core = "0.8.0"
markov_rs = "0.1"
serde = "1.0.130"
serde_json = "1.0.68"
