[package]
name = "lyrian"
version = "0.1.0"
authors = ["Ichi Hazuki <ichi.h3@gmail.com>"]
description = "A Rust crate to generate Japanese lyrics with Markov chain."
documentation = "https://docs.rs/lyrian"
homepage = "https://github.com/LyrianBot/lyrian"
repository = "https://github.com/LyrianBot/lyrian"
keywords = ["lyrics", "markov"]
categories = ["text-processing"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = "0.8"
lindera-core = "0.8"
markov_rs = "0.1"
serde = "1.0"
serde_json = "1.0"
